seaqt/QtCore/gen_qabstractanimation.h

class QAbstractAnimation;
class QAnimationGroup;
class QMetaObject;
class QObject;
typedef struct QAbstractAnimation QAbstractAnimation;
typedef struct QAnimationDriver QAnimationDriver;
typedef struct QAnimationGroup QAnimationGroup;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
bool QAnimationDriver_override_virtual_start(void* self, intptr_t slot);
bool QAnimationDriver_override_virtual_stop(void* self, intptr_t slot);
void QAnimationDriver_virtualbase_stop(void* self);
bool QAnimationDriver_override_virtual_event(void* self, intptr_t slot);
bool QAnimationDriver_virtualbase_event(void* self, QEvent* event);
bool QAnimationDriver_override_virtual_eventFilter(void* self, intptr_t slot);
bool QAnimationDriver_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QAnimationDriver_override_virtual_timerEvent(void* self, intptr_t slot);
void QAnimationDriver_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QAnimationDriver_override_virtual_childEvent(void* self, intptr_t slot);
void QAnimationDriver_virtualbase_childEvent(void* self, QChildEvent* event);
bool QAnimationDriver_override_virtual_customEvent(void* self, intptr_t slot);
void QAnimationDriver_virtualbase_customEvent(void* self, QEvent* event);
bool QAnimationDriver_override_virtual_connectNotify(void* self, intptr_t slot);
void QAnimationDriver_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QAnimationDriver_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QAnimationDriver_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QAnimationDriver_staticMetaObject();
void QAnimationDriver_delete(QAnimationDriver* self);