seaqt/QtCore/gen_qabstractanimation.nim

proc fcQAnimationDriver_override_virtual_start(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_start".}
proc fQAnimationDriver_virtualbase_stop(self: pointer, ): void{.importc: "QAnimationDriver_virtualbase_stop".}
proc fcQAnimationDriver_override_virtual_stop(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_stop".}
proc fQAnimationDriver_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QAnimationDriver_virtualbase_event".}
proc fcQAnimationDriver_override_virtual_event(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_event".}
proc fQAnimationDriver_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QAnimationDriver_virtualbase_eventFilter".}
proc fcQAnimationDriver_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_eventFilter".}
proc fQAnimationDriver_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QAnimationDriver_virtualbase_timerEvent".}
proc fcQAnimationDriver_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_timerEvent".}
proc fQAnimationDriver_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QAnimationDriver_virtualbase_childEvent".}
proc fcQAnimationDriver_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_childEvent".}
proc fQAnimationDriver_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QAnimationDriver_virtualbase_customEvent".}
proc fcQAnimationDriver_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_customEvent".}
proc fQAnimationDriver_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QAnimationDriver_virtualbase_connectNotify".}
proc fcQAnimationDriver_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_connectNotify".}
proc fQAnimationDriver_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QAnimationDriver_virtualbase_disconnectNotify".}
proc fcQAnimationDriver_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_disconnectNotify".}
proc fcQAnimationDriver_staticMetaObject(): pointer {.importc: "QAnimationDriver_staticMetaObject".}
proc fcQAnimationDriver_delete(self: pointer) {.importc: "QAnimationDriver_delete".}


func init*(T: type gen_qabstractanimation_types.QAbstractAnimation, h: ptr cQAbstractAnimation): gen_qabstractanimation_types.QAbstractAnimation =
  T(h: h)
proc create*(T: type gen_qabstractanimation_types.QAbstractAnimation, ): gen_qabstractanimation_types.QAbstractAnimation =
  gen_qabstractanimation_types.QAbstractAnimation.init(fcQAbstractAnimation_new())

proc create*(T: type gen_qabstractanimation_types.QAbstractAnimation, parent: gen_qobject_types.QObject): gen_qabstractanimation_types.QAbstractAnimation =
  gen_qabstractanimation_types.QAbstractAnimation.init(fcQAbstractAnimation_new2(parent.h))

proc metaObject*(self: gen_qabstractanimation_types.QAbstractAnimation, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQAbstractAnimation_metaObject(self.h))

proc metacast*(self: gen_qabstractanimation_types.QAbstractAnimation, param1: cstring): pointer =
  fcQAbstractAnimation_metacast(self.h, param1)

proc metacall*(self: gen_qabstractanimation_types.QAbstractAnimation, param1: cint, param2: cint, param3: pointer): cint =
  fcQAbstractAnimation_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qabstractanimation_types.QAbstractAnimation, s: cstring): string =
  let v_ms = fcQAbstractAnimation_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qabstractanimation_types.QAbstractAnimation, s: cstring): string =
  let v_ms = fcQAbstractAnimation_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc state*(self: gen_qabstractanimation_types.QAbstractAnimation, ): cint =
  cint(fcQAbstractAnimation_state(self.h))

proc group*(self: gen_qabstractanimation_types.QAbstractAnimation, ): gen_qanimationgroup_types.QAnimationGroup =
  gen_qanimationgroup_types.QAnimationGroup(h: fcQAbstractAnimation_group(self.h))

proc direction*(self: gen_qabstractanimation_types.QAbstractAnimation, ): cint =
  cint(fcQAbstractAnimation_direction(self.h))

proc setDirection*(self: gen_qabstractanimation_types.QAbstractAnimation, direction: cint): void =
  fcQAbstractAnimation_setDirection(self.h, cint(direction))

proc currentTime*(self: gen_qabstractanimation_types.QAbstractAnimation, ): cint =
  fcQAbstractAnimation_currentTime(self.h)

proc currentLoopTime*(self: gen_qabstractanimation_types.QAbstractAnimation, ): cint =
  fcQAbstractAnimation_currentLoopTime(self.h)

proc loopCount*(self: gen_qabstractanimation_types.QAbstractAnimation, ): cint =
  fcQAbstractAnimation_loopCount(self.h)

proc setLoopCount*(self: gen_qabstractanimation_types.QAbstractAnimation, loopCount: cint): void =
  fcQAbstractAnimation_setLoopCount(self.h, loopCount)

proc currentLoop*(self: gen_qabstractanimation_types.QAbstractAnimation, ): cint =
  fcQAbstractAnimation_currentLoop(self.h)

proc duration*(self: gen_qabstractanimation_types.QAbstractAnimation, ): cint =
  fcQAbstractAnimation_duration(self.h)

proc totalDuration*(self: gen_qabstractanimation_types.QAbstractAnimation, ): cint =
  fcQAbstractAnimation_totalDuration(self.h)

proc finished*(self: gen_qabstractanimation_types.QAbstractAnimation, ): void =
  fcQAbstractAnimation_finished(self.h)

type QAbstractAnimationfinishedSlot* = proc()
proc miqt_exec_callback_QAbstractAnimation_finished(slot: int) {.exportc.} =
  let nimfunc = cast[ptr QAbstractAnimationfinishedSlot](cast[pointer](slot))
  nimfunc[]()

proc onfinished*(self: gen_qabstractanimation_types.QAbstractAnimation, slot: QAbstractAnimationfinishedSlot) =
  var tmp = new QAbstractAnimationfinishedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQAbstractAnimation_connect_finished(self.h, cast[int](addr tmp[]))

proc stateChanged*(self: gen_qabstractanimation_types.QAbstractAnimation, newState: cint, oldState: cint): void =
  fcQAbstractAnimation_stateChanged(self.h, cint(newState), cint(oldState))

type QAbstractAnimationstateChangedSlot* = proc(newState: cint, oldState: cint)
proc miqt_exec_callback_QAbstractAnimation_stateChanged(slot: int, newState: cint, oldState: cint) {.exportc.} =
  let nimfunc = cast[ptr QAbstractAnimationstateChangedSlot](cast[pointer](slot))
  let slotval1 = cint(newState)

  let slotval2 = cint(oldState)

  nimfunc[](slotval1, slotval2)

proc onstateChanged*(self: gen_qabstractanimation_types.QAbstractAnimation, slot: QAbstractAnimationstateChangedSlot) =
  var tmp = new QAbstractAnimationstateChangedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQAbstractAnimation_connect_stateChanged(self.h, cast[int](addr tmp[]))

proc currentLoopChanged*(self: gen_qabstractanimation_types.QAbstractAnimation, currentLoop: cint): void =
  fcQAbstractAnimation_currentLoopChanged(self.h, currentLoop)

type QAbstractAnimationcurrentLoopChangedSlot* = proc(currentLoop: cint)
proc miqt_exec_callback_QAbstractAnimation_currentLoopChanged(slot: int, currentLoop: cint) {.exportc.} =
  let nimfunc = cast[ptr QAbstractAnimationcurrentLoopChangedSlot](cast[pointer](slot))
  let slotval1 = currentLoop

  nimfunc[](slotval1)

proc oncurrentLoopChanged*(self: gen_qabstractanimation_types.QAbstractAnimation, slot: QAbstractAnimationcurrentLoopChangedSlot) =
  var tmp = new QAbstractAnimationcurrentLoopChangedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQAbstractAnimation_connect_currentLoopChanged(self.h, cast[int](addr tmp[]))

proc directionChanged*(self: gen_qabstractanimation_types.QAbstractAnimation, param1: cint): void =
  fcQAbstractAnimation_directionChanged(self.h, cint(param1))

type QAbstractAnimationdirectionChangedSlot* = proc(param1: cint)
proc miqt_exec_callback_QAbstractAnimation_directionChanged(slot: int, param1: cint) {.exportc.} =
  let nimfunc = cast[ptr QAbstractAnimationdirectionChangedSlot](cast[pointer](slot))
  let slotval1 = cint(param1)

  nimfunc[](slotval1)

proc ondirectionChanged*(self: gen_qabstractanimation_types.QAbstractAnimation, slot: QAbstractAnimationdirectionChangedSlot) =
  var tmp = new QAbstractAnimationdirectionChangedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQAbstractAnimation_connect_directionChanged(self.h, cast[int](addr tmp[]))

proc start*(self: gen_qabstractanimation_types.QAbstractAnimation, ): void =
  fcQAbstractAnimation_start(self.h)

proc pause*(self: gen_qabstractanimation_types.QAbstractAnimation, ): void =
  fcQAbstractAnimation_pause(self.h)

proc resume*(self: gen_qabstractanimation_types.QAbstractAnimation, ): void =
  fcQAbstractAnimation_resume(self.h)

proc setPaused*(self: gen_qabstractanimation_types.QAbstractAnimation, paused: bool): void =
  fcQAbstractAnimation_setPaused(self.h, paused)

proc stop*(self: gen_qabstractanimation_types.QAbstractAnimation, ): void =
  fcQAbstractAnimation_stop(self.h)

proc setCurrentTime*(self: gen_qabstractanimation_types.QAbstractAnimation, msecs: cint): void =
  fcQAbstractAnimation_setCurrentTime(self.h, msecs)

proc tr*(_: type gen_qabstractanimation_types.QAbstractAnimation, s: cstring, c: cstring): string =
  let v_ms = fcQAbstractAnimation_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qabstractanimation_types.QAbstractAnimation, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQAbstractAnimation_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qabstractanimation_types.QAbstractAnimation, s: cstring, c: cstring): string =
  let v_ms = fcQAbstractAnimation_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qabstractanimation_types.QAbstractAnimation, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQAbstractAnimation_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc start*(self: gen_qabstractanimation_types.QAbstractAnimation, policy: cint): void =
  fcQAbstractAnimation_start1(self.h, cint(policy))

proc QAbstractAnimationmetaObject*(self: gen_qabstractanimation_types.QAbstractAnimation, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fQAbstractAnimation_virtualbase_metaObject(self.h))

type QAbstractAnimationmetaObjectProc* = proc(): gen_qobjectdefs_types.QMetaObject
proc onmetaObject*(self: gen_qabstractanimation_types.QAbstractAnimation, slot: QAbstractAnimationmetaObjectProc) =
  # TODO check subclass
  var tmp = new QAbstractAnimationmetaObjectProc
  tmp[] = slot
  GC_ref(tmp)
  fcQAbstractAnimation_override_virtual_metaObject(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QAbstractAnimation_metaObject(self: ptr cQAbstractAnimation, slot: int): pointer {.exportc: "miqt_exec_callback_QAbstractAnimation_metaObject ".} =
  var nimfunc = cast[ptr QAbstractAnimationmetaObjectProc](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
proc QAbstractAnimationmetacast*(self: gen_qabstractanimation_types.QAbstractAnimation, param1: cstring): pointer =
  fQAbstractAnimation_virtualbase_metacast(self.h, param1)
